[workspace]
members = [
  "tdn",
  "types",
  "did",
  "storage",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
authors = ["Dev <hi@postsilicon.dev>"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/postsilicon/tdn"
categories = ["network-programming"]
keywords = ["distributed", "blockchain", "framework", "web3", "network"]

[workspace.dependencies]
tdn_types = { version = "0.11", path = "./types", default-features = false }
anyhow = "1.0"
bincode = "2.0"
blake3 = "1.3"
bs58 = "0.5"
chamomile = "0.11"
chamomile_types = "0.11"
ethsign = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hex = "0.4"
hmac = { version = "0.12", default-features = false }
httparse = "1.6"
mime = "0.3"
pbkdf2 = { version = "0.12", default-features = false }
rand_chacha = "0.3"
rusqlite = {version = "0.36", features = ["bundled-sqlcipher-vendored-openssl"] }
secp256k1 = { version = "0.31", features = ["recovery"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
sha2 = { version = "0.10", default-features = false }
sled = "0.34"
toml = "0.8"
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
unicode-normalization = { version = "0.1", default-features = false }
zeroize = "1.5"

[workspace.dependencies.ed25519-dalek]
git = "https://github.com/cympletech/ed25519-dalek"
default-features = false

[workspace.dependencies.curve25519-dalek]
git = "https://github.com/cympletech/curve25519-dalek"
default-features = false

# # DEBUG patch.
# [patch.crates-io]
# chamomile = { git = "https://github.com/postsilicondev/chamomile" }
# chamomile_types = { git = "https://github.com/postsilicondev/chamomile" }