[package]
name = "tdn_did"
description = "Distributed identity and wallet multiple accounts."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["rand_chacha"]
ed25519 = ["ed25519-dalek", "curve25519-dalek"]

[dependencies]
tdn_types.workspace = true
anyhow.workspace = true
zeroize.workspace = true
serde.workspace = true

# mnemonic (BIP-39)
hmac.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true

rand_chacha = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
curve25519-dalek = { workspace = true, optional = true }

[dev-dependencies]
bs58.workspace = true
hex.workspace = true
ethsign.workspace = true
