[package]
name = "tdn_storage"
description = "A pluggable library for TDN, include local file, local db, distributed db, decentralized db."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["local"]
local = ["rusqlite"]
distributed = []
decentralized = []

[dependencies]
tdn_types.workspace = true
serde.workspace = true
tokio.workspace = true
sled.workspace = true
rusqlite = { workspace = true, optional = true }
