[package]
name = "tdn"
description = "Trusted Distributed Network. (Also a framework for building blockchain/web3 applications)."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["tdn_types/std"]           # standard : one group       , multiple layers.
single = ["tdn_types/single"]     # single   : one group       , no Layers.
multiple = ["tdn_types/multiple"] # multiple : multiple groups , no layers.
full = ["tdn_types/full"]         # full     : multiple groups , multiple layers.

[dependencies]
tdn_types.workspace = true
blake3.workspace = true
chamomile.workspace = true
futures-util.workspace = true
httparse.workspace = true
mime.workspace = true
rand_chacha.workspace = true
secp256k1.workspace = true
serde.workspace = true
toml.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
