[package]
name = "tdn_types"
description = "TDN framework core types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []      # standard : one group       , multiple layers.
single = []   # signle   : one group       , no Layers.
multiple = [] # multiple : multiple groups , no layers.
full = []     # full     : multiple groups , multiple layers.

[dependencies]
anyhow.workspace = true
bincode.workspace = true
blake3.workspace = true
chamomile_types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
